cleanup directory structure

--- a/.github/workflows/php-application-image-manual.yml
+++ b/.github/workflows/php-application-image-manual.yml
@@ -55,13 +55,11 @@ jobs:
         env:
           PHP_VERSION: ${{ github.event.inputs.php_version }}
           BASE: ${{ github.event.inputs.base }}
-        run: cd ./base && ../preprocessor "$BASE.Dockerfile" > Dockerfile && cd ..
+        run: ./preprocessor "$BASE.Dockerfile" > Dockerfile
       -
         name: Build docker image
         uses: docker/build-push-action@v3
         with:
-          context: base
-          file: base/Dockerfile
           build-args: "PHP_VERSION=${{ github.event.inputs.php_version }}"
           platforms: ${{ github.event.inputs.architectures }}
           push: true
