--- a/.github/workflows/php-application-image.yml
+++ b/.github/workflows/php-application-image.yml
@@ -54,18 +54,18 @@ jobs:
             php_version: 8.2
             arches: linux/amd64,linux/arm64
             tags: 'phpimageleague/php-application-server:swoole-8.2,phpimageleague/php-application-server:swoole-8,phpimageleague/php-application-server:swoole'
-          - base: dev
+          - base: fpm-dev
             php_version: 8.0
             arches: linux/amd64,linux/arm64
-            tags: 'phpimageleague/php-application-server:dev-8.0'
-          - base: dev
+            tags: 'phpimageleague/php-application-server:fpm-dev-8.0,phpimageleague/php-application-server:dev-8.0'
+          - base: fpm-dev
             php_version: 8.1
             arches: linux/amd64,linux/arm64
-            tags: 'phpimageleague/php-application-server:dev-8.1'
-          - base: dev
+            tags: 'phpimageleague/php-application-server:fpm-dev-8.1,phpimageleague/php-application-server:dev-8.1'
+          - base: fpm-dev
             php_version: 8.2
             arches: linux/amd64,linux/arm64
-            tags: 'phpimageleague/php-application-server:dev-8.2,phpimageleague/php-application-server:dev-8,phpimageleague/php-application-server:dev'
+            tags: 'phpimageleague/php-application-server:fpm-dev-8.2,phpimageleague/php-application-server:dev-8.2,phpimageleague/php-application-server:fpm-dev-8,phpimageleague/php-application-server:dev-8,phpimageleague/php-application-server:fpm-dev,phpimageleague/php-application-server:dev'
     runs-on: ubuntu-latest
     steps:
       -
