--- a/.github/workflows/php-application-image.yml
+++ b/.github/workflows/php-application-image.yml
@@ -95,6 +95,7 @@ jobs:
         name: Build docker image
         uses: docker/build-push-action@v3
         with:
+          context: .
           build-args: "PHP_VERSION=${{ matrix.php_version }}"
           platforms: ${{ matrix.arches }}
           tags: ${{ matrix.tags }}
