--- a/.github/workflows/active.yml
+++ b/.github/workflows/active.yml
@@ -92,5 +92,6 @@ jobs:
           platforms: ${{ matrix.arches }}
           tags: ${{ matrix.tags }}
           push: true
+          pull: true
           cache-from: type=gha
           cache-to: type=gha,mode=max
