--- a/.github/workflows/single.yml
+++ b/.github/workflows/single.yml
@@ -64,6 +64,7 @@ jobs:
           build-args: "PHP_VERSION=${{ github.event.inputs.php_version }}"
           platforms: ${{ github.event.inputs.architectures }}
           push: true
+          pull: true
           tags: "${{ github.event.inputs.tags }}"
           cache-from: type=gha
           cache-to: type=gha,mode=max
