add more binary paths to path

--- a/setup/Dockerfile
+++ b/setup/Dockerfile
@@ -1,9 +1,10 @@
 ENV PROJECT_ROOT /var/www
 ENV PROJECT_WEBROOT /var/www/public
+ENV VENDOR_DIRECTORY /var/www/vendor
 ENV PROJECT_BINARIES /var/www/bin
 ENV GLOBAL_BINARIES /usr/local/bin
 
-ENV PATH $PATH:$PROJECT_BINARIES:$GLOBAL_BINARIES
+ENV PATH $PATH:$GLOBAL_BINARIES:$PROJECT_ROOT:$PROJECT_BINARIES:$VENDOR_DIRECTORY/bin
 
 RUN mkdir -p $PROJECT_ROOT && mkdir -p $GLOBAL_BINARIES
 
